[WARP-SPEED] fix some Intellij warnings
(cherry picked from commit 8f48fa893c3b2dad64cf47566d3280b9aeec2fad)